src/test/ui/repr/repr-transparent-other-reprs.stderr
error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:5:8
   |
LL | #[repr(transparent, C)] //~ ERROR cannot have other repr
   |        ^^^^^^^^^^^  ^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:10:8
   |
LL | #[repr(transparent, packed)] //~ ERROR cannot have other repr
   |        ^^^^^^^^^^^  ^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:13:8
   |
LL | #[repr(transparent, align(2))] //~ ERROR cannot have other repr
   |        ^^^^^^^^^^^  ^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-transparent-other-reprs.rs:16:8
   |
LL | #[repr(transparent)] //~ ERROR cannot have other repr
   |        ^^^^^^^^^^^
LL | #[repr(C)]
   |        ^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0692`.
